Update to latest 2.1.2 deployment

--- a/install.conf
+++ b/install.conf
@@ -1,14 +1,13 @@
 WRITER_GITHUB_PATH=RunicRealmsGithub/writer-files
-WRITER_GITHUB_BRANCH=2.1
-WRITER_GITHUB_USERNAME=RunicRealmsGithub
-WRITER_BASE_PATH=..
+WRITER_GITHUB_BRANCH=2.1.2
+CONFIG_GITHUB_PATH=RunicRealmsGithub/writer-files-config
+CONFIG_GITHUB_BRANCH=main
+CONFIG_GITHUB_FILEPATH=file-mappings-2.1.2.yml
 
 PLUGINS_GITHUB_PATH=Runic-Studios/RunicRealms
-PLUGINS_GITHUB_ARTIFACT_ID=1127850951
-PLUGINS_LOCAL_FOLDER=../plugins
+PLUGINS_GITHUB_ARTIFACT_ID=1236720365
 
 BUILD_ARTIFACT_DIR=/home/mch/multicraft/build-artifacts
-BUILD_ARTIFACT_TARGET=test-artifact-12-14
-BUILD_BASE_PATH=..
+BUILD_ARTIFACT_TARGET=2-1-2-final
 
 INSTANCE_CONF=instance-conf/live-instance.yml
