Updated to process writer-files target from writer-files-config

--- a/install.conf
+++ b/install.conf
@@ -1,13 +1,11 @@
-WRITER_GITHUB_PATH=RunicRealmsGithub/writer-files
-WRITER_GITHUB_BRANCH=2.1.2
 CONFIG_GITHUB_PATH=RunicRealmsGithub/writer-files-config
 CONFIG_GITHUB_BRANCH=main
-CONFIG_GITHUB_FILEPATH=file-mappings-2.1.2.yml
+CONFIG_GITHUB_FILEPATH=file-mappings-2.1.3.yml
 
 PLUGINS_GITHUB_PATH=Runic-Studios/RunicRealms
-PLUGINS_GITHUB_ARTIFACT_ID=1236720365
+PLUGINS_GITHUB_ARTIFACT_ID=1236772247
 
 BUILD_ARTIFACT_DIR=/home/mch/multicraft/build-artifacts
 BUILD_ARTIFACT_TARGET=2-1-2-final
 
-INSTANCE_CONF=instance-conf/live-instance.conf
+INSTANCE_CONF=instance-conf/dev-instance.yml
